﻿
29/1/2016:
* UP: lambda parameter annotated type now unifies with star
* REFACT: HML parts of type inference have been monadized
* UP: unification between type applications now unifies kinds of both left-hands to an arrow
* UP: several minor TODOs in the task list have been done or pruned
* REFACT: new small utiliy: ty.fresh_star_var_and_ty: it computes both the var and the ty
* FIX: substitution composition fixed again: it was applied in reverse order sometimes


28/1/2016:
* UP: kind unification integrated within new mgu algorithm for HML


22-27/1/2016:
* HML being debugged extensively
* FIX: many fixes, major and minor
* REFACT: variable printing, scheme printing and lots of other stuff redone
* REFACT: Report.prompt now supports arbitrary values after the type, i.e. a separator (e.g. "=" for values) and a value; moreover, it introduces an EOL if the printing
          would truncate due to console buffer width
* UP: quantified variables (or a whole prefix) can now be added to the set of quantified variables for pretty printing normalized vars; the use-binding-and-IDisposable
      trick has been used for removing vars from the set when coming up from recursion without the need to pass a parameter to ty.pretty


21/1/2016:
* FIX: when the left-hand pattern of a let-binding is a plain identifier, no trivial unification takes place between the inferred type and the type inferred for the pattern


20/1/2016:
* UP: HML implementation largely done
* TEST: testing of HML system started: a few early bugs have been fixed, but there's gonna be a lot of work to do yet
* REFACT: lots of type manipulation stuff, useful for putting asserts checking System-F types, normal form etc.
* FIX: old type inference code introducing fresh vars into Γ have been updated to introduce a boundary for that var into the prefix as well.
       One example of this is pt_patt dealing with P_Var term


19/1/2016: