@@ -60,7 +60,7 @@ module internal Mgu =
 
     module Pure =
         let S = subst_ty
-
+        let ( ** ) = compose_tksubst
         let kmgu ctx k1 k2 = tsubst.empty, kmgu ctx k1 k2
 
         type var with
@@ -102,25 +102,44 @@ module internal Mgu =
             for c in cs do
                 check_skolem_escape ctx c θ Q
 
-        let rec subsume ctx (Q : prefix) (T_Foralls_F (αs, t1) as t1_) (t2_ : ty) =
-            assert (t1_.is_nf && t2_.is_nf)
-            L.mgu "[sub] %O :> %O\n      Q = %O\n" t1_ t2_ Q
-            match t2_ with
-            | T_Bottom k -> Q, kmgu ctx t1_.kind k
+        let rec mgu ctx Q t1_ t2_ =
+            L.mgu "[mgu] %O == %O\n      Q = %O" t1_ t2_ Q
+            let Q, (tθ, kθ) as r = mgu' ctx Q t1_ t2_
+            L.mgu "[mgu] %O\n      %O\n      Q' = %O" tθ kθ Q
+            r
 
-            | T_ForallsQ (Q2, t2) ->            
-                assert (Q.is_disjoint Q2)
+        and subsume ctx Q t1_ t2_ =
+            L.mgu "[sub] %O :> %O\n      Q = %O\n" t1_ t2_ Q
+            let Q, (tθ, kθ) as r = subsume' ctx Q t1_ t2_
+            L.mgu "[sub] %O\n      %O\n      Q' = %O" tθ kθ Q
+            r
+
+        and mgu_scheme ctx Q t1_ t2_ =
+            L.mgu "[mgu-scheme] %O == %O\n             Q = %O" t1_ t2_ Q
+            let Q, (tθ, kθ), t as r = mgu_scheme' ctx Q t1_ t2_
+            L.mgu "[mgu-scheme] %O\n             %O\n             Q' = %O\n             t = %O" tθ kθ Q t
+            r
+
+        and subsume' ctx (Q : prefix) (t1_ : ty) (t2_ : ty) =
+            let t1_ = t1_.nf
+            let t2_ = t2_.nf
+            match t1_, t2_ with
+            | _, T_Bottom k -> Q, kmgu ctx t1_.kind k   // this case comes from HML implementation - it is not in the paper
+
+            | T_Foralls_F (αs, t1), T_ForallsQ (Q2, t2) ->            
+                assert Q.is_disjoint Q2
+                assert t1.is_unquantified
+                assert t2.is_unquantified
                 let skcs, t1' = skolemize_ty αs t1
-                let Q1, (tθ1, kθ1) = mgu ctx (Q + Q2) t1' t2
+                let Q1, (tθ1, kθ1) = mgu ctx (Q + Q2) t1' t2    // TODO: does this unify kinds automatically?
                 let Q2, Q3 = Q1.split Q.dom
                 let θ2 = tθ1.remove Q3.dom, kθ1
                 check_skolems_escape ctx skcs θ2 Q2
                 Q2, θ2
 
-
-        and mgu_scheme ctx (Q : prefix) (t1_ : ty)  (t2_ : ty) =
-            assert (t1_.is_nf && t2_.is_nf)
-            L.mgu "[mgu-σ] %O == %O\n        Q = %O" t1_ t2_ Q
+        and mgu_scheme' ctx (Q : prefix) (t1_ : ty)  (t2_ : ty) =
+            assert t1_.is_nf
+            assert t2_.is_nf
             match t1_, t2_ with
             | (T_Bottom k, (_ as t))
             | (_ as t, T_Bottom k) -> Q, kmgu ctx k t.kind, t
@@ -132,14 +151,13 @@ module internal Mgu =
                 in
                     Q4, θ3, T_ForallsQ (Q5, S θ3 t1)
 
-
-        and mgu (ctx : mgu_context) Q t1_ t2_ : prefix * tksubst =
-            let ( ** ) = compose_tksubst
+        and mgu' (ctx : mgu_context) Q t1_ t2_ : prefix * tksubst =
             let loc = ctx.loc
-            let t1_ = t1_.nf
-            let t2_ = t2_.nf
             let rec R (Q0 : prefix) (t1 : ty) (t2 : ty) =
-                assert (t1.is_ftype && t2.is_ftype)
+                let t1 = t1.nf
+                let t2 = t2.nf
+                assert t1.is_ftype
+                assert t2.is_ftype
                 match t1, t2 with
                 | T_Cons (x, k1), T_Cons (y, k2) when x = y -> Q0, kmgu ctx k1 k2
                 | T_Var (α, k1), T_Var (β, k2) when α = β   -> Q0, kmgu ctx k1 k2
@@ -160,9 +178,9 @@ module internal Mgu =
                     let θ0 = kmgu ctx k1 k2 ** kmgu ctx t1.kind t2.kind
                     let skcs1, t1 = skolemize_ty [α1, k1] (S θ0 t1)
                     let skcs2, t2 = skolemize_ty [α2, k2] (S θ0 t2)
-                    let Q1, θ1 = R Q0 t1 t2
+                    let Q1, θ1 = let S = S θ0 in R Q0 (S t1) (S t2)
                     check_skolems_escape ctx (skcs1 + skcs2) θ1 Q1
-                    Q1, θ1
+                    Q1, θ1 ** θ0
 
                 | T_Var (α1, k1), T_NamedVar (α2, k2) // prefer named over anonymous when unifying var vs. var
                 | T_NamedVar (α2, k2), T_Var (α1, k1)
@@ -171,7 +189,7 @@ module internal Mgu =
                     let α1t = Q0.lookup α1
                     let α2t = Q0.lookup α2
                     // occurs check between one tyvar into the other's type bound and the other way round
-                    let check α t = if Set.contains α (dom_wrt Q0 t) then Report.Error.circularity loc t1 t2 (T_Var (α, t.kind)) t2
+                    let check α t = if Set.contains α (dom_wrt Q0 t) then let S = S θ0 in Report.Error.circularity loc (S t1) (S t2) (T_Var (α, t.kind)) (S t2)
                     check α1 α2t
                     check α2 α1t
                     let Q1, θ1, t = mgu_scheme ctx Q α1t α2t
@@ -190,14 +208,14 @@ module internal Mgu =
                     // occurs check
                     if Set.contains α (dom_wrt Q t) then let S = S θ0 in Report.Error.circularity loc (S t1_) (S t2_) (S (T_Var (α, k))) (S t)
                     let Q1, θ1 = subsume ctx Q t αt
-                    let Q2, θ2 = Q1.update_prefix_with_subst (α, S θ1 t)
+                    let Q2, θ2 = let S = S <| θ1 ** θ0 in Q1.update_prefix_with_subst (α, S t)
                     in
                         Q2, θ2 ** θ1 ** θ0
 
                 | T_App (t1, t2), T_App (t1', t2') ->
                     let θ0 = kmgu ctx (K_Arrow (t2.kind, kind.fresh_var)) t1.kind ** kmgu ctx (K_Arrow (t2'.kind, kind.fresh_var)) t1'.kind
-                    let Q1, θ1 = R Q0 (S θ0 t1) (S θ0 t1')
-                    let Q2, θ2 = R Q1 (S θ1 t2) (S θ1 t2')
+                    let Q1, θ1 = let S = S θ0 in R Q0 (S t1) (S t1')
+                    let Q2, θ2 = let S = S <| θ1 ** θ0 in R Q1 (S t2) (S t2')
                     in
                         Q2, θ2 ** θ1 ** θ0
                                                            
@@ -205,15 +223,14 @@ module internal Mgu =
                     raise (Mismatch (t1, t2))
 
             try
-                L.mgu "[U] %O == %O\n    Q = %O" t1_ t2_ Q
-                let Q, (tθ, kθ as θ) = R Q t1_ t2_
+                let Q, (tθ, _ as θ) = R Q t1_ t2_
                 // check post-condition of HML unify function
                 for _, t in tθ do
                     assert t.nf.is_ftype
-                L.mgu "[S] %O\n    %O\n    Q' = %O" tθ kθ Q
                 Q, θ
             with Mismatch (t1, t2) -> Report.Error.type_mismatch loc t1_ t2_ t1 t2
 
+       
 
 let mgu = Mgu.Pure.mgu
 
@@ -221,13 +238,13 @@ let try_mgu ctx Q t1 t2 =
     try Some (mgu ctx Q t1 t2)
     with :? Report.type_error -> None
     
-type basic_builder with
+type typing_builder with
     member M.unify loc t1 t2 =
         M {
-            let! { θ = θ; γ = γ } = M.get_state
+            let! γ = M.get_γ
             let! Q = M.get_Q
-            let t1 = subst_ty θ t1
-            let t2 = subst_ty θ t2
+            let! t1 = M.update_ty t1
+            let! t2 = M.update_ty t2
 //            L.mgu "[U] %O =?= %O\n    Q = %O" t1 t2 Q
             let Q, (tθ, kθ as θ) = mgu { loc = loc; γ = γ } Q t1 t2
 //            L.mgu "[S] %O\n    %O\n    Q' = %O" tθ kθ Q
