@@ -7,13 +7,14 @@ namespace Test
 
 let app f x = f x
 
-(*let const x y = x
 
 let intapp f = f 1
 
+let const x y = x
+
 let id x = x
 
-let revapp x f = f x*)
+let revapp x f = f x
 
 (*let poly (f : forall 'a. 'a -> 'a) = f 1, f true
 
